--- a/socialapp/templates/setting.html
+++ b/socialapp/templates/setting.html
@@ -45,19 +45,21 @@
                         <p></p>
                     </div>
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
-    
+                    <form action="" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
                        <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
                             <div class="col-span-2">
                                 <label for="">Profile Image</label>
-                                <input type="file" name="Image" placeholder="" class="shadow-none bg-gray-100">
+                                <img width="100" height="100" src="{{user_profile.profileimg.url}}"/>
+                                <input type="file" name="image" value="" class="shadow-none bg-gray-100">
                             </div>
                             <div class="col-span-2">
                                 <label for="about">Bio</label>  
-                                <textarea id="about" name="bio" rows="3"  class="shadow-none bg-gray-100"></textarea>
+                                <textarea id="about" name="bio" rows="3"  class="shadow-none bg-gray-100">{{user_profile.bio}}</textarea>
                             </div> 
                             <div class="col-span-2">
                                 <label for=""> Location</label>
-                                <input type="text" name="location" placeholder="" class="shadow-none bg-gray-100">
+                                <input type="text" name="location" value="{{user_profile.location}}" class="shadow-none bg-gray-100">
                             </div>
                             <!-- <div>
                                <label for=""> Working at</label>
@@ -76,13 +78,14 @@
                        </div> 
     
                        <div class="bg-gray-10 p-6 pt-0 flex justify-end space-x-3">
-                           <button class="p-2 px-4 rounded bg-gray-50 text-red-500"> Cancel </button>
-                           <button type="button" class="button bg-blue-700"> Save </button>
+                           <button class="p-2 px-4 rounded bg-gray-50 text-red-500"><a href="/">Cancel </button>
+                           <button type="submit" class="button bg-blue-700"> Save </button>
                        </div>
+                    </form>
     
-                    <!-- </div>
+                    </div>
 
-                    <div>
+                    <!-- <div>
                         <h3 class="text-xl mb-2"> Privacy</h3>
                         <p> </p>
                     </div>
