--- a/socialapp/templates/index.html
+++ b/socialapp/templates/index.html
@@ -61,7 +61,7 @@
                             </div>
     
                             <!-- notification contents -->
-                            <form action="" method="post">
+                            
                             <div class="flex justify-center flex-center text-center">
     
                                 <div class="flex flex-col choose-upload text-center">
@@ -72,17 +72,21 @@
                                             <path d="M9 13h2v5a1 1 0 11-2 0v-5z" />
                                         </svg>
                                     </div>
-
+                                    <form action="upload" method="POST" enctype="multipart/form-data">
                                     <p class="my-3 leading-6"> Upload pictures
                                     </p>
                                     <div>
                                         <input type="file" name="image_upload">
                                         <!-- <a href="#" class="button soft-warning small"> Choose file</a> -->
+                                        <textarea class="button soft-warning small" name="caption" placeholder="Caption"></textarea>
+                                        <br>
+                                        <button class="button bg-blue-700" type="submit"> Upload</button>
                                     </div>
+                                    </form>
     
-                                    <a href="#" class="uk-text-muted mt-3 uk-link"
+                                    <!-- <a href="#" class="uk-text-muted mt-3 uk-link"
                                         uk-toggle="target: .choose-upload ;  animation: uk-animation-slide-right-small, uk-animation-slide-left-medium; queued: true">
-                                        Or Import Video </a>
+                                        Or Import Video </a> -->
                                 </div>
     
                                 <div class="uk-flex uk-flex-column choose-upload" hidden>
@@ -105,7 +109,6 @@
                                 </div>
     
                             </div>
-                            </form>
                             <div class="px-4 py-3 -mx-5 -mb-4 mt-5 border-t text-sm">
                                 Your Video size Must be Maxmium 999MB
                             </div>
